too much confused and then stopped
everything i do is not working. Will continue tomorrow.

--- a/movie-site/src/App.css
+++ b/movie-site/src/App.css
@@ -1,1 +1,5 @@
-
+.main{
+    background: url('./components/navbar/movie-background.jpg') no-repeat center center/cover;
+    height: 100vh;
+    object-fit: contain;
+ }
