--- a/movie-site/src/components/navbar/style.css
+++ b/movie-site/src/components/navbar/style.css
@@ -6,11 +6,16 @@
 a{
     text-decoration: none;
 }
-.main{
-    
+.logo-primary-color{
+    color: rgb(148, 148, 148);
 }
+.main{
+    background: url('./movie-background.jpg') no-repeat center center/cover;
+    height: 100vh;
+    object-fit: contain;
+ }
 .container{
-    max-width: 800px;
+    max-width: 1300px;
     margin:auto;
     display: flex;
     justify-content: space-between;
@@ -23,9 +28,9 @@ a{
 .container ul li a{
    padding: 1.2rem;
    display: block;
+   color: rgb(114, 98, 252);
 }
 .container ul li a:hover{
-    background-color: black;
     border-radius: 5px;
     color: white;
     transition: .5s;
